--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://miseon920.github.io/" />
+    <meta property="og:title" content="sunny portfolio" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/logo.png" />
+    <meta property="og:description" content="sunny portfolio" />
+    <meta property="og:site_name" content="sunny portfolio" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="400" />
     <title>Kim Mi Seon</title>
   </head>
 
