--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:locale" content="ko_KR" />
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="400" />
-    <title>Kim Mi Seon1</title>
+    <title>Kim Mi Seon</title>
   </head>
 
   <body>
